table horizontal scrolling fixed

--- a/src/app/agreement/agreement.component.css
+++ b/src/app/agreement/agreement.component.css
@@ -17,6 +17,10 @@
   margin-left: auto;
 }
 
+.table-responsive{
+  overflow-x: hidden;
+}
+
 .asset-table tr{
   border-bottom: 1px solid #9c9898;
   border-right: 1px solid #9c9898;
