--- a/src/app/details/details.component.css
+++ b/src/app/details/details.component.css
@@ -1,3 +1,6 @@
 .ass-size{
     width: 18px;
 }
+.table-responsive{
+    overflow-x: hidden;
+}
